# Python_Anesthesia_Simulator

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: draft-pdf.yml
Our_idea/: EKF_MPC.py  EKF_MPC_lin.ipynb  EKF_MPC_lin.py  EKF_NMPC-Copy1.ipynb  EKF_NMPC.ipynb  EKF_NMPC.py  EKF_linMPC_adap.py  KF_linMPC_adap.py  MMPC_control.py  NMPC_cluster.py  debug_MMPC_baye.py  debug_multi.py  multi_MPC_cluster.py  multiple_model_control.py  optimal_parameters_EKF.csv  read_cluster_results.py  result_NMPC_n=32.csv  test EKF on PID.ipynb  test EKF on PID.py  test_least_square.py
docs/: requirements.txt
docs/source/: conf.py  examples.rst  index.rst  intro.rst  modules.rst  src.python_anesthesia_simulator.rst  src.rst
docs/source/examples/: blood_loss_simu.ipynb  check_vitalDB_model.ipynb  pid_sim_functions.py
example/: Controller.py  EKF_MPC_lin.py  EKF_NMPC.py  Estimators.py  Merigo_PID.ipynb  NMPC_cluster.py  PID.py  Pawlowski_MPC.ipynb  Pawlowski_MPC.py  Schiavo_PID.py  blood_loss_simu.ipynb  check_vitalDB_model.ipynb  info_clinic_vitalDB.csv  optimal_parameters_MPC.csv  optimal_parameters_MPC_lin.csv  optimal_parameters_PID.csv  optimal_parameters_PID_reject.csv  pid.py  pid_sim_functions.py  plot_cost.py  read_cluster_results.py  test EKF on PID.py
paper/: PAS_paper.md  bibli.bib
src/: disturbances.py  patient.py
src/Control/: Controller.py  Estimators.py
src/PAS/: Models.py  Patient.py  disturbances.py  metrics.py
src/python_anesthesia_simulator/: __init__.py  disturbances.py  main.py  metrics.py  models.py  patient.py  pd_models.py  pk_models.py  simulator.py
src/python_anesthesias_simulator/: disturbances.py  metrics.py  models.py  patient.py
tests/: test.py  test_blood_loss.py  test_disturance_and_metrics.py  test_disturbance_and_metrics.py  test_equilibrium.py
