[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python_anesthesia_simulator"
version = "1.0.0"
authors = [
  {name="Bob Aubouin--Pairault"},
  {email="bob.aubouin@tutanota.com"},
]
description = """Anesthesia simulator: modellize the effect of drugs (Propofol, Remifentanil, Norepinephrine) \
                 during general anesthesia. Specially build for control design."""
readme = "README.md"
requires-python = ">=3.9"
dependencies=[
    "numpy",
    "control==0.9.4",
    "matplotlib",
    "casadi>=3.6.3",
    "pandas"
]
license = { text = "GNU General Public License v3 (GPLv3)" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BobAubouin/Python_Anesthesia_Simulator"
"Bug Tracker" = "https://github.com/BobAubouin/Python_Anesthesia_Simulator/issues"
